# docs6/open/openapi.yml
@@ -2470,7 +2470,7 @@ paths:
          - VIEW_LINK_MAP, VIEW_LINK_TAGS, VIEW_LINK_VIEW, 
          - VIEW_MOVEMENT_MAP, VIEW_MOVEMENT_TAGS, VIEW_MOVEMENT_STOCK, VIEW_MOVEMENT_INVENTORY, VIEW_MOVEMENT_WAYBILL, VIEW_MOVEMENT_FORMULA, VIEW_MOVEMENT_VIEW, 
          - VIEW_PAYMENT_MAP, VIEW_PAYMENT_INVOICE, VIEW_PAYMENT_TAGS, VIEW_PAYMENT_VIEW, 
-         - VIEW_PLACE_CONTACTS, VIEW_PLACE_MAP, VIEW_PLACE_TAGS, VIEW_PLACE_VIEW, 
+         - VIEW_PLACE_CONTACTS, VIEW_PLACE_EVENTS, VIEW_PLACE_MAP, VIEW_PLACE_TAGS, VIEW_PLACE_VIEW, 
          - VIEW_PRICE_MAP, VIEW_PRICE_TAGS, VIEW_PRICE_VIEW, 
          - VIEW_PRODUCT_EVENTS, VIEW_PRODUCT_MAP, VIEW_PRODUCT_TAGS, VIEW_PRODUCT_VIEW, VIEW_PRODUCT_COMPONENTS,
          - VIEW_PROJECT_ADDRESSES, VIEW_PROJECT_CONTACTS, VIEW_PROJECT_EVENTS, VIEW_PROJECT_MAP, VIEW_PROJECT_TAGS, VIEW_PROJECT_VIEW, 
@@ -3410,6 +3410,10 @@ components:
           type: array
           items:
             $ref: '#/components/schemas/Contact'
+        events:
+          type: array
+          items:
+            $ref: '#/components/schemas/Event'
         place_meta:
           type: object
           properties:
@@ -4036,6 +4040,7 @@ components:
             - "VIEW_PAYMENT_TAGS"
             - "VIEW_PAYMENT_VIEW"
             - "VIEW_PLACE_CONTACTS"
+            - "VIEW_PLACE_EVENTS"
             - "VIEW_PLACE_MAP"
             - "VIEW_PLACE_TAGS"
             - "VIEW_PLACE_VIEW"
